extract common parts from start scripts
Signed-off-by: ac892247 <a.chmelo@gmail.com>