@@ -74,259 +74,70 @@
 # - ZWE_zowe_certificate_keystore_type - The default keystore type to use for SSL certificates
 # - ZWE_zowe_verifyCertificates - if we accept only verified certificates
 
-if [ -n "${LAUNCH_COMPONENT}" ]
-then
+# Source common APIML scripts (sets up common variables and functions)
+SCRIPT_DIR=$(dirname "$0")
+. "${SCRIPT_DIR}/apiml-common-scripts.sh"
+
+# JAR file location
+if [ -n "${LAUNCH_COMPONENT}" ]; then
     JAR_FILE="${LAUNCH_COMPONENT}/zaas-service-lite.jar"
 else
     JAR_FILE="$(pwd)/bin/zaas-service-lite.jar"
 fi
-echo "jar file: "${JAR_FILE}
+echo "jar file: ${JAR_FILE}"
 
-# script assumes it's in the ZAAS component directory and common_lib needs to be relative path
-if [ -z "${CMMN_LB}" ]
-then
-    COMMON_LIB="../apiml-common-lib/bin/BOOT-INF/lib/"
-else
-    COMMON_LIB=${CMMN_LB}
-fi
-
-# script assumes it's in the zaas component directory and jvm.security.override.properties needs to be relative path
-JVM_SECURITY_PROPERTIES=""
-if [ "${JVM_SECURITY_PROPERTIES_OVERRIDE:-false}" = "true" ]; then
-    JVM_SECURITY_PROPERTIES="-Djava.security.properties=../apiml-common-lib/bin/jvm.security.override.properties"
-fi
-
-if [ -z "${LIBRARY_PATH}" ]
-then
-    LIBRARY_PATH="../common-java-lib/bin/"
-fi
-
-if [ "${ZWE_configs_debug}" = "true" ]
-then
-    if [ -n "${ZWE_configs_spring_profiles_active}" ];
-    then
-        ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active},"
-    fi
-    ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active}debug"
-fi
-
-# setting the cookieName based on the instances
-
-if [  "${ZWE_configs_apiml_security_auth_uniqueCookie}" = "true" ]; then
-    cookieName="apimlAuthenticationToken.${ZWE_zowe_cookieIdentifier}"
-fi
-
-# FIXME: APIML_DIAG_MODE_ENABLED is not officially mentioned. We can still use it behind the scene,
-# or we can define configs.diagMode in manifest, then use "$ZWE_configs_diagMode".
-# DIAG_MODE=${APIML_DIAG_MODE_ENABLED}
-# if [ ! -z "$DIAG_MODE" ]
-# then
-#   if [ -n "${ZWE_configs_spring_profiles_active}" ];
-#   then
-#       ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active},"
-#   fi
-#   ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active}diag"
-# fi
-
-# how to verifyCertificates
-verify_certificates_config=$(echo "${ZWE_zowe_verifyCertificates}" | tr '[:lower:]' '[:upper:]')
-if [ "${verify_certificates_config}" = "DISABLED" ]; then
-  verifySslCertificatesOfServices=false
-elif [ "${verify_certificates_config}" = "NONSTRICT" ]; then
-  verifySslCertificatesOfServices=true
-  nonStrictVerifySslCertificatesOfServices=true
-else
-  # default value is STRICT
-  verifySslCertificatesOfServices=true
-  nonStrictVerifySslCertificatesOfServices=false
-fi
-
-ZOWE_CONSOLE_LOG_CHARSET=UTF-8
-if [ "$(uname)" = "OS/390" ]
-then
-    QUICK_START=-Xquickstart
+# ZAAS loader path (includes IRRRacf.jar on z/OS)
+if [ "$(uname)" = "OS/390" ]; then
     ZAAS_LOADER_PATH=${COMMON_LIB},/usr/include/java_classes/IRRRacf.jar
-
-    JAVA_VERSION=$(${JAVA_HOME}/bin/javap -J-Xms4m -J-Xmx16m -verbose java.lang.String \
-        | grep "major version" \
-        | cut -d " " -f5)
-
-    if [ $JAVA_VERSION -ge 65 ]; then # Java 21
-        ZOWE_CONSOLE_LOG_CHARSET=IBM-1047
-        # Java 21+ changed default encoding to UTF-8 (JEP 400). Set console encoding
-        # to EBCDIC for z/OS SYSPRINT to prevent garbled characters in early startup logs
-        JAVA21_CONSOLE_ENCODING="-Dstdout.encoding=${ZOWE_CONSOLE_LOG_CHARSET} -Dstderr.encoding=${ZOWE_CONSOLE_LOG_CHARSET}"
-    fi
 else
     ZAAS_LOADER_PATH=${COMMON_LIB}
 fi
 
 # Check if the directory containing the ZAAS shared JARs was set and append it to the ZAAS loader path
-if [ -n "${ZWE_ZAAS_SHARED_LIBS}" ]
-then
+if [ -n "${ZWE_ZAAS_SHARED_LIBS}" ]; then
     ZAAS_LOADER_PATH=${ZWE_ZAAS_SHARED_LIBS},${ZAAS_LOADER_PATH}
 fi
+echo "Setting loader path: ${ZAAS_LOADER_PATH}"
 
-echo "Setting loader path: "${ZAAS_LOADER_PATH}
-
-LOGBACK=""
-if [ -n "${ZWE_configs_logging_config}" ]; then
-    LOGBACK="-Dlogging.config=${ZWE_configs_logging_config}"
+# Debug profile
+if [ "${ZWE_configs_debug}" = "true" ]; then
+    add_profile "debug"
 fi
 
-add_profile() {
-    new_profile=$1
-    if [ -n "${ZWE_configs_spring_profiles_active}" ]; then
-        ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active},"
-    fi
-    ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active}${new_profile}"
-}
-
-ATTLS_SERVER_ENABLED="false"
-ATTLS_CLIENT_ENABLED="false"
-
-if [ "${ZWE_zowe_network_server_tls_attls}" = "true" ]; then
-  ATTLS_SERVER_ENABLED="true"
-fi
-if [ "${ZWE_zowe_network_client_tls_attls}" = "true" ]; then
-  ATTLS_CLIENT_ENABLED="true"
+# Cookie name for unique cookie support
+if [ "${ZWE_configs_apiml_security_auth_uniqueCookie}" = "true" ]; then
+    cookieName="apimlAuthenticationToken.${ZWE_zowe_cookieIdentifier}"
 fi
 
+# AT-TLS server profile
 if [ "${ATTLS_SERVER_ENABLED}" = "true" ]; then
-  ZWE_configs_server_ssl_enabled="false"
-  add_profile "attlsServer"
+    ZWE_configs_server_ssl_enabled="false"
+    add_profile "attlsServer"
 fi
 
-internalProtocol="https"
-ZWE_DISCOVERY_SERVICES_LIST=${ZWE_DISCOVERY_SERVICES_LIST:-"https://${ZWE_haInstance_hostname:-localhost}:${ZWE_components_discovery_port:-7553}/eureka/"}
+# AT-TLS client profile
 if [ "${ATTLS_CLIENT_ENABLED}" = "true" ]; then
     add_profile "attlsClient"
-    ZWE_DISCOVERY_SERVICES_LIST=$(echo "${ZWE_DISCOVERY_SERVICES_LIST=}" | sed -e 's|https://|http://|g')
-    internalProtocol=http
 fi
 
-if [ "${ZWE_configs_server_ssl_enabled:-true}" = "true" -o "$ATTLS_SERVER_ENABLED" = "true" ]; then
+# External protocol determination
+if [ "${ZWE_configs_server_ssl_enabled:-true}" = "true" ] || [ "$ATTLS_SERVER_ENABLED" = "true" ]; then
     externalProtocol="https"
 else
     externalProtocol="http"
 fi
 
-LIBPATH="$LIBPATH":"/lib"
-LIBPATH="$LIBPATH":"/usr/lib"
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/bin
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/bin/classic
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/bin/j9vm
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/lib/s390/classic
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/lib/s390/default
-LIBPATH="$LIBPATH":"${JAVA_HOME}"/lib/s390/j9vm
-LIBPATH="$LIBPATH":"${LIBRARY_PATH}"
-
-if [ -n "${ZWE_ZAAS_LIBRARY_PATH}" ]
-then
+# ZAAS-specific library path
+if [ -n "${ZWE_ZAAS_LIBRARY_PATH}" ]; then
     LIBPATH="$LIBPATH":"${ZWE_ZAAS_LIBRARY_PATH}"
 fi
 
-ADD_OPENS="--add-opens=java.base/java.lang=ALL-UNNAMED
-        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-        --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED
-        --add-opens=java.base/java.util=ALL-UNNAMED
-        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-        --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
-        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-        --add-opens=java.base/java.io=ALL-UNNAMED"
-
-get_enabled_protocol_limit() {
-    target=$1
-    type=$2
-    default=$3
-    key_component="ZWE_configs_zowe_network_${target}_tls_${type}Tls"
-    value_component=$(eval echo \$$key_component)
-    key_zowe="ZWE_zowe_network_${target}_tls_${type}Tls"
-    value_zowe=$(eval echo \$$key_zowe)
-    enabled_protocol_limit=${value_component:-${value_zowe:-${default}}}
-}
-
-extract_between() {
-    echo "$1" | sed -e "s/.*$2,//" -e "s/$3.*//"
-}
-
-get_enabled_protocol() {
-    target=$1
-    get_enabled_protocol_limit "${target}" "min" "TLSv1.2"
-    enabled_protocols_min=${enabled_protocol_limit}
-    get_enabled_protocol_limit "${target}" "max" "TLSv1.3"
-    enabled_protocols_max=${enabled_protocol_limit}
-
-    if [ "${enabled_protocols_min:-}" = "${enabled_protocols_max:-}" ]; then
-        result="${enabled_protocols_max:-}"
-    elif [ -z "${enabled_protocols_min:-}" ]; then
-        result="${enabled_protocols_max:-}"
-    else
-        enabled_protocols_max=${enabled_protocols_max:-"TLSv1.3"}
-        enabled_protocols=,TLSv1,TLSv1.1,TLSv1.2,TLSv1.3,TLSv1.4,
-        # Extract protocols between min and max (inclusive)
-        result=$(extract_between "$enabled_protocols" "$enabled_protocols_min" "$enabled_protocols_max")
-        result="$enabled_protocols_min,$result$enabled_protocols_max"
-    fi
-}
-
-server_protocol="TLS"
-get_enabled_protocol "server"
-server_enabled_protocols=${result:-"TLSv1.3"}
-server_ciphers=${ZWE_configs_zowe_network_server_tls_ciphers:-${ZWE_components_gateway_zowe_network_server_tls_ciphers:-${ZWE_zowe_network_server_tls_ciphers:-TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_DHE_RSA_WITH_AES_256_GCM_SHA384,TLS_DHE_DSS_WITH_AES_256_GCM_SHA384,TLS_DHE_RSA_WITH_AES_128_GCM_SHA256,TLS_DHE_DSS_WITH_AES_128_GCM_SHA256,TLS_ECDH_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDH_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDH_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDH_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA384,TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_CBC_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_EMPTY_RENEGOTIATION_INFO_SCSV}}}
-get_enabled_protocol "client"
-client_enabled_protocols=${ZWE_components_gateway_apiml_httpclient_ssl_enabled_protocols:-${result:-${server_enabled_protocols}}}
-client_ciphers=${ZWE_configs_zowe_network_client_tls_ciphers:-${ZWE_components_gateway_zowe_network_client_tls_ciphers:-${ZWE_zowe_network_client_tls_ciphers:-${server_ciphers}}}}
-
-keystore_type="${ZWE_configs_certificate_keystore_type:-${ZWE_zowe_certificate_keystore_type:-PKCS12}}"
-keystore_pass="${ZWE_configs_certificate_keystore_password:-${ZWE_zowe_certificate_keystore_password}}"
-key_alias="${ZWE_configs_certificate_keystore_alias:-${ZWE_zowe_certificate_keystore_alias}}"
-key_pass="${ZWE_configs_certificate_key_password:-${ZWE_zowe_certificate_key_password:-${keystore_pass}}}"
-truststore_type="${ZWE_configs_certificate_truststore_type:-${ZWE_zowe_certificate_truststore_type:-PKCS12}}"
-truststore_pass="${ZWE_configs_certificate_truststore_password:-${ZWE_zowe_certificate_truststore_password}}"
-
-keystore_location="${ZWE_configs_certificate_keystore_file:-${ZWE_zowe_certificate_keystore_file}}"
-truststore_location="${ZWE_configs_certificate_truststore_file:-${ZWE_zowe_certificate_truststore_file}}"
-
-if [ "${keystore_type}" = "JCERACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjce://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjce://_)
-elif [ "${keystore_type}" = "JCECCARACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjcecca://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjcecca://_)
-elif [ "${keystore_type}" = "JCEHYBRIDRACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjcehybrid://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjcehybrid://_)
-fi
-
-if [ "${ATTLS_SERVER_ENABLED}" = "true" -a "${APIML_ATTLS_LOAD_KEYRING:-false}" = "true" ]; then
-  keystore_type=
-  keystore_pass=
-  key_pass=
-  key_alias=
-  keystore_location=
-fi
-
-# NOTE: these are moved from below
-#    -Dapiml.service.preferIpAddress=${APIML_PREFER_IP_ADDRESS:-false} \
-#    -Dapiml.service.ipAddress=${ZOWE_IP_ADDRESS:-127.0.0.1} \
-#    -Dapiml.security.auth.jwtKeyAlias=${PKCS11_TOKEN_LABEL:-jwtsecret} \
-
-if [ -n "${ZWE_java_home}" ]; then
-    JAVA_BIN_DIR=${ZWE_java_home}/bin/
-fi
-
-# Source the custom JVM parameters parser
-# This parses ZWE_configs_jvm_* environment variables and populates CUSTOM_JVM_OPTS
-SCRIPT_DIR=$(dirname "$0")
-. "${SCRIPT_DIR}/parse_jvm_args.sh"
-
+# Certificates URLs
 CERTIFICATES_URLS=${internalProtocol:-https}://${ZWE_haInstance_hostname:-localhost}:${ZWE_components_gateway_port:-7554}/gateway/certificates
 CERTIFICATES_URLS=${ZWE_configs_apiml_security_x509_certificatesUrl:-${ZWE_components_gateway_apiml_security_x509_certificatesUrl:-${CERTIFICATES_URLS}}}
 CERTIFICATES_URLS=${ZWE_configs_apiml_security_x509_certificatesUrls:-${ZWE_components_gateway_apiml_security_x509_certificatesUrls:-${CERTIFICATES_URLS}}}
 
 ZAAS_CODE=AZ
-SHARED_CLASSES_OPTS="-Xshareclasses:name=apiml_shared_classes,nonfatal"
 _BPX_JOBNAME=${ZWE_zowe_job_prefix}${ZAAS_CODE} ${JAVA_BIN_DIR}java \
     -Xms${ZWE_configs_heap_init:-32}m -Xmx${ZWE_configs_heap_max:-512}m \
     ${QUICK_START} \
